[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Inter-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_bottom = 6.0
bg_color = Color( 0.247059, 0.568627, 0.427451, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 6.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 6.0
content_margin_right = 6.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 2.0
expand_margin_right = 2.0

[node name="HBoxContainer" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 18.0
margin_right = 496.0
margin_bottom = 282.0

[node name="ModuleInfo" type="PanelContainer" parent="HBoxContainer"]
margin_right = 140.0
margin_bottom = 264.0
rect_min_size = Vector2( 140, 0 )
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ModuleInfo"]
margin_left = 10.0
margin_top = 6.0
margin_right = 130.0
margin_bottom = 254.0
custom_constants/separation = 8

[node name="Title" type="Label" parent="HBoxContainer/ModuleInfo/VBoxContainer"]
margin_right = 120.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Wasm Module Info"
align = 1
valign = 1

[node name="InfoText" type="RichTextLabel" parent="HBoxContainer/ModuleInfo/VBoxContainer"]
unique_name_in_owner = true
margin_top = 29.0
margin_right = 120.0
margin_bottom = 248.0
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "?"
text = "?"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 156.0
margin_right = 480.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Benchmarks" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 324.0
margin_bottom = 109.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Benchmarks"]
margin_left = 10.0
margin_top = 6.0
margin_right = 314.0
margin_bottom = 99.0
custom_constants/separation = 8

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer"]
margin_right = 304.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Benchmarks"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer"]
margin_left = 22.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 51.0
size_flags_horizontal = 4
custom_constants/separation = 6

[node name="Label1" type="Label" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 108.0
margin_bottom = 18.0
text = "Highest prime up to"
align = 1

[node name="PrimeLimit" type="SpinBox" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 114.0
margin_right = 194.0
margin_bottom = 22.0
rect_min_size = Vector2( 80, 22 )
size_flags_horizontal = 4
size_flags_vertical = 0
max_value = 999999.0
value = 1000.0
rounded = true
align = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer/HBoxContainer"]
margin_left = 200.0
margin_top = 3.0
margin_right = 208.0
margin_bottom = 18.0
text = "="
align = 1

[node name="PrimeAnswer" type="Label" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 214.0
margin_top = 3.0
margin_right = 260.0
margin_bottom = 18.0
rect_min_size = Vector2( 46, 0 )
text = "?"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer"]
margin_left = 115.0
margin_top = 59.0
margin_right = 188.0
margin_bottom = 93.0
size_flags_horizontal = 4
custom_constants/hseparation = 16
columns = 2

[node name="Label1" type="Label" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer/GridContainer"]
margin_right = 51.0
margin_bottom = 15.0
text = "GDScript"

[node name="TimeGDScript" type="Label" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 73.0
margin_bottom = 15.0
text = "?"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer/GridContainer"]
margin_top = 19.0
margin_right = 51.0
margin_bottom = 34.0
text = "Wasm"

[node name="TimeWasm" type="Label" parent="HBoxContainer/VBoxContainer/Benchmarks/VBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 67.0
margin_top = 19.0
margin_right = 73.0
margin_bottom = 34.0
text = "?"

[node name="MemoryOperations" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 324.0
margin_bottom = 264.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MemoryOperations"]
margin_left = 10.0
margin_top = 6.0
margin_right = 314.0
margin_bottom = 129.0
custom_constants/separation = 8

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer"]
margin_right = 304.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Memory Operations"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer"]
margin_left = 20.0
margin_top = 29.0
margin_right = 283.0
margin_bottom = 51.0
size_flags_horizontal = 4
custom_constants/separation = 6

[node name="Label1" type="Label" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 29.0
margin_bottom = 18.0
text = "Write"
align = 1

[node name="MemoryType" type="OptionButton" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 35.0
margin_right = 95.0
margin_bottom = 22.0
rect_min_size = Vector2( 60, 22 )
size_flags_horizontal = 0
text = "Int"
align = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/HBoxContainer"]
margin_left = 101.0
margin_top = 3.0
margin_right = 207.0
margin_bottom = 18.0
text = "to memory position"
align = 1

[node name="MemoryOffset" type="SpinBox" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 213.0
margin_right = 263.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 4
size_flags_vertical = 0
max_value = 7.0
rounded = true
align = 1

[node name="MemoryInput" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer"]
unique_name_in_owner = true
margin_left = 92.0
margin_top = 59.0
margin_right = 212.0
margin_bottom = 81.0
size_flags_horizontal = 4

[node name="MemoryInt" type="SpinBox" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/MemoryInput"]
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 22 )
size_flags_horizontal = 4
size_flags_vertical = 0
min_value = -9.22337e+18
max_value = 9.22337e+18
rounded = true
align = 1

[node name="MemoryFloat" type="SpinBox" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/MemoryInput"]
visible = false
margin_top = 36.0
margin_right = 80.0
margin_bottom = 58.0
rect_min_size = Vector2( 120, 22 )
size_flags_horizontal = 4
size_flags_vertical = 0
min_value = -9.22337e+18
max_value = 9.22337e+18
step = 0.001
align = 1

[node name="MemoryString" type="LineEdit" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/MemoryInput"]
visible = false
margin_top = 36.0
margin_right = 120.0
margin_bottom = 58.0
rect_min_size = Vector2( 120, 22 )
custom_styles/normal = SubResource( 5 )
max_length = 16
placeholder_text = "Enter String"
placeholder_alpha = 0.4

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer"]
margin_left = 55.0
margin_top = 89.0
margin_right = 249.0
margin_bottom = 123.0
size_flags_horizontal = 4
custom_constants/hseparation = 16
columns = 2

[node name="Label1" type="Label" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/GridContainer"]
margin_right = 78.0
margin_bottom = 15.0
text = "Global Value"

[node name="GlobalValue" type="Label" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 194.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
text = "?"
uppercase = true

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/GridContainer"]
margin_top = 19.0
margin_right = 78.0
margin_bottom = 34.0
text = "Memory Read"

[node name="ReadValue" type="Label" parent="HBoxContainer/VBoxContainer/MemoryOperations/VBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 94.0
margin_top = 19.0
margin_right = 194.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
text = "?"
uppercase = true
